--- a/Algorithmic.Mobile/Properties/Resources.resx
+++ b/Algorithmic.Mobile/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="KIWOOM" xml:space="preserve">
+    <value>/hubs/kiwoom</value>
+  </data>
   <data name="NETWORKACCESS" xml:space="preserve">
     <value>check internet and try again.</value>
   </data>
