--- a/Algorithmic.Mobile/Properties/Resources.resx
+++ b/Algorithmic.Mobile/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Account" xml:space="preserve">
+    <value>계좌</value>
+  </data>
   <data name="KIWOOM" xml:space="preserve">
     <value>/hubs/kiwoom</value>
   </data>
@@ -125,5 +128,8 @@
   </data>
   <data name="OK" xml:space="preserve">
     <value>OK</value>
+  </data>
+  <data name="Stock" xml:space="preserve">
+    <value>종목</value>
   </data>
 </root>
